Order-service: implement API for watch list
